--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"@testing-library/react": "^9.4.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@types/jest": "^24.9.1",
+		"@types/lodash": "^4.14.149",
 		"@types/node": "^12.12.26",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
 		"@types/react-router-dom": "^5.1.3",
 		"electron-is-dev": "^1.1.0",
+		"lodash": "^4.17.15",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
